sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: Int does not take parameters
            echange(i,i+ecart);
                   ^